# Wine-quality-prediction-mlops

./: README.md  app.py  main.py  pyproject.toml  requirements.txt  template.py
config/: config.yaml
research/: 1_data_ingestion.ipynb  2_data_validation.ipynb  3_data_transformation.ipynb  4_model_trainer.ipynb  5_model_evaluation.ipynb  research.ipynb
src/wine_quality_predictor/: __init__.py
src/wine_quality_predictor/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_trainer.py
src/wine_quality_predictor/config/: configuration.py
src/wine_quality_predictor/entity/: config_entity.py
src/wine_quality_predictor/pipeline/: data_ingestion_pipeline.py  data_transformation_pipeline.py  data_validation_pipeline.py  model_evaluation_pipeline.py  model_trainer_pipeline.py
src/wine_quality_predictor/utils/: common.py
templates/: index.html  results.html
