[project]
name = "wine-quality-prediction-mlops"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ensure>=1.0.4",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "ipykernel>=7.1.0",
    "joblib>=1.5.2",
    "matplotlib>=3.10.7",
    "mlflow==2.22.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "python-box>=7.3.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
    "types-pyyaml>=6.0.12.20250915",
]
